@@ -107,6 +107,9 @@ Library
   at the end if the FileInput was opened with binary mode.
   Patch by Ryosuke Ito.
 
+- Issue #25530: Disable the vulnerable SSLv3 protocol by default when creating
+  ssl.SSLContext.
+
 - Issue #25569: Fix memory leak in SSLSocket.getpeercert().
 
 - Issue #21827: Fixed textwrap.dedent() for the case when largest common
